@@ -2870,21 +2870,19 @@ pcor2inv <- function(partial_correlations)
 
 #' @noRd
 # Continuous Accuracy (for single variable) ----
-# Updated 12.02.2024
+# Updated 26.03.2024
 continuous_accuracy <- function(prediction, observed)
 {
 
-  # Compute square error
-  square_error <- (prediction - observed)^2
+  # No intercept for prediction
+  # sum((observed - mean(observed, na.rm = TRUE))^2, na.rm = TRUE)
+  # A great explanation on why not: https://stats.stackexchange.com/questions/26176/removal-of-statistically-significant-intercept-term-increases-r2-in-linear-mo
 
   # Return accuracies
   return(
     c(
-      R2 = 1 - (
-        sum(square_error, na.rm = TRUE) /
-        sum((observed - mean(observed, na.rm = TRUE))^2, na.rm = TRUE)
-      ),
-      RMSE = sqrt(mean(square_error, na.rm = TRUE))
+      R2 = sum(prediction^2, na.rm = TRUE) / sum(observed^2, na.rm = TRUE),
+      RMSE = sqrt(mean((prediction - observed)^2, na.rm = TRUE))
     )
   )
 
